[package]
name = "mjpg-multiplex-streamer"
version = "0.1.0"
edition = "2024"
authors = ["Marcus Ofehed"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Ofenhed/mjpg-multiplex-streamer"

[[bin]]
name = "mjpg-multiplex-input"
path = "src/main_input.rs"

[[bin]]
name = "mjpg-multiplex-output"
path = "src/main_output.rs"
required-features = ["http_server"]

[features]
http_server = ["dep:hyper"]

[dependencies]
anyhow = ">0.90"
clap = { version = "4.5", features = ["derive"] }
hyper = { version = "1.0", optional = true }
inotify = "0.11"
thiserror = "2.0"
tokio = { version = "1.43", features = ["fs", "rt", "macros", "io-util", "time", "io-std"] }
tokio-stream = { version = "0.1.17" }
